fix: page alignment

--- a/assets/css/syntax.css
+++ b/assets/css/syntax.css
@@ -1,3 +1,8 @@
 body {
     padding-top: 5rem;
+    align-content: center;
+}
+
+nav{
+    padding-bottom: 5rem;
 }
